# MW-SR

./: .gitignore  CITATION.cff  LICENSE  MODEL_CARD.md  MODEL_LICENSE.md  NOTICE  README.md  environment.yml  pyproject.toml
ATMS/: README.md
beginner_guide/: README.md
configs/: mw_sr.yaml  mw_sr_gan.yaml
docs/: DATA.md
github_case/: atms_example.py
metadata/: .gitignore
release_assets/: README.md
scripts/: README.md
tests/: test_installation.py  test_loader.py  test_models.py  test_release_artifacts.py
tomorrow.io.new/: README.md  TMS02.1C-TCR.V01-00.NRT.ST20260409-005146.ET20260409-010332.CT20260409-011553.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260409-005146.ET20260409-010332.CT20260416-032813.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260409-124330.ET20260409-124502.CT20260409-132950.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260409-124330.ET20260409-124502.CT20260416-034854.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260410-002100.ET20260410-003430.CT20260410-004804.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260410-121534.ET20260410-123202.CT20260410-130424.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260411-012726.ET20260411-013930.CT20260411-015201.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260412-005732.ET20260412-011032.CT20260412-012246.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260412-125114.ET20260412-130722.CT20260412-133927.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260413-003000.ET20260413-004132.CT20260413-005349.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260413-121748.ET20260413-123310.CT20260413-130134.nc.h5  TMS02.1C-TCR.V01-00.NRT.ST20260414-013146.ET20260414-014530.CT20260414-020457.nc.h5  (+13 more)
(+54 files in other folders)
